--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "json-server": "^0.17.0",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
