--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "axios": "^0.27.2",
-    "bcrypt": "^5.0.1",
     "json-server": "^0.17.0",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
@@ -16,7 +15,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-json:server": "json-server --watch ./db/db.json --port 3005"
   },
   "eslintConfig": {
     "extends": [
