--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "start-json:server": "json-server --watch ./db/db.json --port 3005"
+    "start-server": "json-server --watch ./db/db.json --port 3005"
   },
   "eslintConfig": {
     "extends": [
